# ethdenver-hackathon

./: Cargo.toml  Hackathon.md  README.md  Readme.md
ether-price-getter/: Readme.md  curl_cfg.json  ether_price_getter_cfg.json
ether-price-getter/artifacts/: curl_adapter.wasm  ether_price_getter.wasm
ether-price-getter/curl_adapter/: Config.json
ether-price-getter/ether_price_getter/src/: eth_price_getter.rs
fluence-cuckoo/: Readme.md
fluence-cuckoo/fce-cuckoo/: .gitignore  Cargo.toml  Config.toml  cuckoo_cfg.json  cuckoo_create_cf.clj
fluence-cuckoo/fce-cuckoo-app/: .gitignore  Cargo.toml
fluence-cuckoo/fce-cuckoo-app/src/: main.rs
fluence-cuckoo/fce-cuckoo/src/: main.rs
src/: curl.rs  errors.rs  main.rs  results.rs
web-frontend/: package-lock.json  package.json
web-frontend/src/: fluence.ts
web-frontend/src/components/: App.scss  App.tsx
web3-examples/: Readme.md  build.sh
web3-examples/facade/src/: eth_calls.rs  eth_calls_tests.rs  eth_filter_test.rs  eth_filters.rs  eth_hashers.rs  eth_type_test.rs  eth_utils.rs  jsonrpc_helpers.rs  main.rs
workshop/: Workshop.md
